--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,8 @@
 /* Start Global Varaibles */
+:root {
+  --main-color: #10cab7;
+  --secondary-color: #2c4755;
+}
 
 /* End Global Varaibles */
 
@@ -11,18 +15,9 @@ body {
   font-family: "Work Sans", sans-serif;
 }
 
-/* End Global Rules */
-.parent {
-  background-color: darkgoldenrod;
-}
-
 .container {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  /* padding: 0 15px;
-  margin: 0 auto; */
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
 /* Small Screens */
@@ -58,4 +53,248 @@ body {
   .container {
     width: 1320px;
   }
+}
+
+/* End Global Rules */
+/* Start Header */
+.header {
+  padding: 20px;
+}
+
+.header .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header .container .logo {
+  width: 80px;
+}
+
+.header .links {
+  position: relative;
+}
+
+.header .links .icon {
+  width: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+
+.header .links .icon span {
+  background: #333;
+  margin-bottom: 5px;
+  height: 3px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.header .links:hover .icon span:nth-child(2) {
+  width: 100%;
+}
+
+.header .links .icon span:first-child {
+  width: 100%;
+}
+
+.header .links .icon span:nth-child(2) {
+  width: 60%;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+
+.header .links .icon span:last-child {
+  width: 100%;
+}
+
+.header .links ul::before {
+  content: "";
+  border-width: 10px;
+  border-style: solid;
+  border-color: transparent transparent #44424280 transparent;
+  position: absolute;
+  right: 5px;
+  top: -24px;
+}
+
+.header .links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background-color: #f6f6f6;
+  position: absolute;
+  right: 0;
+  min-width: 200px;
+  top: calc(100% + 15px);
+  display: none;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+
+.header .links:hover ul {
+  display: block;
+}
+
+.header .links ul li {
+  padding: 15px;
+  border-bottom: 1px solid #bbb8b85b;
+}
+
+.header .links ul li a {
+  text-decoration: none;
+  color: #333;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+
+.header .links ul li a:hover {
+  padding-left: 25px;
+}
+
+/* Start landing Section */
+.landing {
+  background-image: url("../Images/landing-Background.jpg");
+  background-size: cover;
+  height: calc(100vh - 72px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.landing .intro-text {
+  width: 320px;
+  text-align: center;
+  max-width: 100%;
+}
+
+.landing .intro-text h1 {
+  margin: 0;
+  color: var(--main-color);
+  font-size: 50px;
+}
+
+.landing .intro-text p {
+  margin: 0;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+/* Start Features Section */
+.features {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  text-align: center;
+}
+
+.features .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+}
+
+.features i {
+  color: var(--main-color);
+  font-size: 50px;
+}
+
+.features h3 {
+  font-weight: 800;
+  margin: 30px 0;
+}
+
+.features p {
+  line-height: 1.6;
+  color: #383535;
+  font-size: 18px;
+}
+
+/* Start Services Section  */
+
+.services {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.services .container>h3 {
+  color: #777777;
+  text-align: center;
+  font-weight: 300;
+}
+
+.services .services-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 30px;
+  margin-top: 100px;
+}
+
+.services .services-content .srv {
+  display: flex;
+  margin-bottom: 40px;
+}
+
+.services .services-content .srv i {
+  color: var(--main-color);
+  font-size: 30px;
+  margin-right: 20px;
+  text-align: center;
+}
+
+.services .services-content .srv .text {
+  flex: 1;
+}
+
+.services .services-content .srv .text h3 {
+  margin: 0 0 20px;
+}
+
+.services .services-content .srv .text p {
+  color: #444;
+  font-weight: 300;
+  line-height: 1.6;
+}
+
+.services .services-content .shape {
+  text-align: center;
+  position: relative;
+}
+
+@media (max-width: 1199px) {
+  .services .services-content .shape {
+    display: none;
+  }
+}
+
+.services .services-content .shape::before {
+  content: "";
+  background-color: var(--secondary-color);
+  width: 100px;
+  height: calc(100% + 100px);
+  top: -50px;
+  position: absolute;
+  right: 0;
+  z-index: -1;
+}
+
+.services .services-content .shape::after {
+  content: "";
+  background-color: white;
+  width: 100px;
+  height: 100%;
+  top: 0;
+  position: absolute;
+  right: 50px;
+  z-index: -1;
 }
