--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,8 @@
 :root {
   --main-color: #10cab7;
   --secondary-color: #2c4755;
+  --section-padding: 40px;
+  --background-color: #f6f6f6;
 }
 
 /* End Global Varaibles */
@@ -16,46 +18,59 @@ body {
 }
 
 .container {
-  padding: 0 15px;
-  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-/* Small Screens */
-@media (min-width: 576px) {
-  .container {
-    width: 540px;
-  }
-}
-
-/* Medium Screens */
+/* Small */
 @media (min-width: 768px) {
   .container {
-    width: 720px;
+    width: 750px;
   }
 }
 
-/* Large Screens */
+/* Medium */
 @media (min-width: 992px) {
   .container {
-    width: 960px;
+    width: 970px;
+  }
+}
+
+/* Large */
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
   }
 }
 
 /* X-Large Screens */
 @media (min-width: 1200px) {
   .container {
-    width: 1140px;
-  }
-}
-
-/* XX-Large Screens */
-@media (min-width: 1400px) {
-  .container {
-    width: 1320px;
+    width: 1170px;
   }
 }
 
 /* End Global Rules */
+/* Start Components */
+.special-heading {
+  color: #ebeced;
+  font-size: 100px;
+  text-align: center;
+  font-weight: 800;
+  letter-spacing: -3px;
+  margin: 0;
+}
+
+.special-heading+p {
+  margin: -30px 0 0;
+  font-size: 20px;
+  text-align: center;
+  color: #797979;
+}
+
+/* End Components */
 /* Start Header */
 .header {
   padding: 20px;
@@ -64,6 +79,7 @@ body {
 .header .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .header .container .logo {
@@ -84,7 +100,6 @@ body {
 .header .links .icon span {
   background: #333;
   margin-bottom: 5px;
-  height: 3px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -165,43 +180,55 @@ body {
 
 /* Start landing Section */
 .landing {
-  background-image: url("../Images/landing-Background.jpg");
+  background-image: url("../Images/landing.jpg");
   background-size: cover;
   height: calc(100vh - 72px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
 }
 
 .landing .intro-text {
   width: 320px;
-  text-align: center;
   max-width: 100%;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
 }
 
 .landing .intro-text h1 {
   margin: 0;
   color: var(--main-color);
   font-size: 50px;
+  font-weight: bold;
 }
 
 .landing .intro-text p {
-  margin: 0;
   font-size: 20px;
   font-weight: 500;
 }
 
 /* Start Features Section */
 .features {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--background-color);
   text-align: center;
 }
 
 .features .container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px;
+}
+
+.features .feat {
+  padding: 20px;
+  text-align: center;
 }
 
 .features i {
@@ -223,19 +250,13 @@ body {
 /* Start Services Section  */
 
 .services {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.services .container>h3 {
-  color: #777777;
-  text-align: center;
-  font-weight: 300;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
 }
 
 .services .services-content {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 30px;
   margin-top: 100px;
 }
@@ -245,11 +266,17 @@ body {
   margin-bottom: 40px;
 }
 
+@media (max-width: 767px) {
+  .services .services-content .srv {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
 .services .services-content .srv i {
   color: var(--main-color);
   font-size: 30px;
-  margin-right: 20px;
-  text-align: center;
+  flex-basis: 60px;
 }
 
 .services .services-content .srv .text {
@@ -261,9 +288,9 @@ body {
 }
 
 .services .services-content .srv .text p {
-  color: #444;
-  font-weight: 300;
+  color: #383535;
   line-height: 1.6;
+  font-weight: 300;
 }
 
 .services .services-content .shape {
@@ -280,7 +307,7 @@ body {
 .services .services-content .shape::before {
   content: "";
   background-color: var(--secondary-color);
-  width: 100px;
+  width: 200px;
   height: calc(100% + 100px);
   top: -50px;
   position: absolute;
@@ -291,10 +318,174 @@ body {
 .services .services-content .shape::after {
   content: "";
   background-color: white;
+  width: 200px;
+  height: 90%;
+  top: 5%;
+  position: absolute;
+  right: 100px;
+  z-index: -1;
+}
+
+/* Start potfolio Section */
+.portfolio {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--background-color);
+}
+
+.portfolio .container .portfolio-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+  margin-top: 80px;
+}
+
+.portfolio .container .portfolio-content .port img {
+  max-width: 100%;
+}
+
+.portfolio .container .portfolio-content .port h2 {
+  font-size: 50px;
+}
+
+.portfolio .container .portfolio-content .port p {
+  line-height: 1.6;
+  color: #383535;
+}
+
+/* Start About Section */
+.about {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--background-color);
+}
+
+.about .container .about-content {
+  margin-top: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.about .container .about-content .image {
+  position: relative;
+  width: 250px;
+  height: 375px;
+}
+
+.about .container .about-content .image::before {
+  content: "";
   width: 100px;
   height: 100%;
-  top: 0;
+  background-color: var(--main-color);
   position: absolute;
-  right: 50px;
+  right: -30px;
+  top: -10%;
   z-index: -1;
+}
+
+.about .container .about-content .image::after {
+  content: "";
+  width: 100%;
+  height: 20%;
+  background-color: var(--main-color);
+  position: absolute;
+  right: -100px;
+  bottom: 10%;
+  z-index: -1;
+}
+
+.about .container .about-content .image img {
+  max-width: 100%;
+}
+
+.about .container .about-content .text {
+  flex-basis: calc(100% - 500px);
+}
+
+@media (max-width: 991px) {
+  .about .container .about-content .text {
+    flex-basis: 100%;
+    margin-top: 30px;
+  }
+
+  .about .container .about-content {
+    justify-content: space-evenly;
+  }
+}
+
+.about .container .about-content .text hr {
+  width: 50%;
+  margin: 50px 0;
+  border-color: var(--main-color);
+}
+
+.about .container .about-content .text p:first-child {
+  line-height: 1.6;
+  font-weight: bold;
+}
+
+.about .container .about-content .text p:last-child {
+  line-height: 1.6;
+  color: #383535;
+}
+
+/* Start Contact Section */
+
+.contact {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--background-color);
+}
+
+.contact .info {
+  margin-top: 80px;
+  text-align: center;
+}
+
+.contact .container .info p {
+  color: var(--secondary-color);
+  font-size: 35px;
+  font-weight: 800;
+  letter-spacing: -2px;
+  margin-bottom: 20px;
+}
+
+.contact .container .info a {
+  display: block;
+  color: var(--main-color);
+  font-size: 35px;
+  font-weight: 800;
+  text-decoration: none;
+  letter-spacing: -1px;
+  margin-bottom: 20px;
+}
+
+.contact .container .info .social {
+  font-weight: 400;
+}
+
+.contact .container .info .social i {
+  margin-left: 10px;
+  color: var(--secondary-color);
+}
+
+/* Start Copyright Section */
+.copy {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--secondary-color);
+  margin-top: 80px;
+}
+
+.copy .container {
+  text-align: center;
+  color: white;
+  font-weight: 400;
+}
+
+.copy .container span {
+  color: var(--main-color);
+  font-size: 18px;
+  font-weight: 600;
 }
