--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,6 +13,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Work Sans", sans-serif;
 }
@@ -99,16 +103,13 @@ body {
 
 .header .links .icon span {
   background: #333;
+  height: 2px;
   margin-bottom: 5px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-}
-
-.header .links:hover .icon span:nth-child(2) {
-  width: 100%;
 }
 
 .header .links .icon span:first-child {
@@ -124,9 +125,14 @@ body {
   -o-transition: 0.3s;
 }
 
-.header .links .icon span:last-child {
+.header .links .icon:hover span:last-child {
   width: 100%;
 }
+
+.header .links .icon span:nth-child(3) {
+  width: 100%;
+}
+
 
 .header .links ul::before {
   content: "";
@@ -146,13 +152,14 @@ body {
   position: absolute;
   right: 0;
   min-width: 200px;
-  top: calc(100% + 15px);
+  top: calc(100%);
   display: none;
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
+  z-index: 1;
 }
 
 .header .links:hover ul {
@@ -357,7 +364,6 @@ body {
 .about {
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
-  background-color: var(--background-color);
 }
 
 .about .container .about-content {
@@ -371,6 +377,10 @@ body {
   position: relative;
   width: 250px;
   height: 375px;
+}
+
+.about .container .about-content .image img {
+  max-width: 100%;
 }
 
 .about .container .about-content .image::before {
@@ -395,9 +405,7 @@ body {
   z-index: -1;
 }
 
-.about .container .about-content .image img {
-  max-width: 100%;
-}
+
 
 .about .container .about-content .text {
   flex-basis: calc(100% - 500px);
@@ -471,21 +479,22 @@ body {
 }
 
 /* Start Copyright Section */
-.copy {
+.footer {
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
   background-color: var(--secondary-color);
   margin-top: 80px;
 }
 
-.copy .container {
+.footer .container {
   text-align: center;
   color: white;
   font-weight: 400;
 }
 
-.copy .container span {
+.footer .container span {
   color: var(--main-color);
+  padding: 30px 10px;
+  text-align: center;
   font-size: 18px;
-  font-weight: 600;
 }
